2011-09-09  Bastian Maerkisch  <bmaerkisch@web.de>

	src/win/wgnuplib.h src/win/wgraph.c src/win/wresourc.h term/win.trm:
	Add a toolbar to the graph window. Currently, it offers icons for Copy,
	Print, Save and Options. Additionaly, plot elements can be temporarily
	hidden, ie. without a `replot`. This is much like what can be done
	using canvas and svg terminals and is implemented using term->layer.

2011-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes):  "with image" from a
	function may not make sense, but at least it should not seqfault.
	Bug #3406642

2011-09-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_sum_expression): Simplify construction of summation
	action table.
	
	* src/command.c (undefine_command) src/eval.c (del_udv_by_name):
	Break out the guts of undefine_command into a utility routine that can
	be called internally.

	* src/hidden3d.c (build_networks): Valgrind found a test against an
	uninitialized field.

2011-09-06  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: cairo_ps_surface_set_eps is only supported by cairo
	version 1.6.0 or later.

2011-09-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/canvas.trm: Allow canvas and svg terminals to provide
	mousing even if gnuplot itself is built without USE_MOUSE.

	* src/gplt_x11.c src/Makefile.am:  gnuplot_x11 --version

2011-09-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (fn_completion, tab_completion, isdoublewidth)
	src/win/screenbuf.h (sb_calc_length) src/win/wcommon.h (open_printer,
	close_printer) src/win/wgraph.c (UnicodeText) src/win/winmain.c
	(ShutDown, CheckMemory) src/win/wmenu.c: Add missing prototypes, 
	make local functions static.

	* src/alloc.c src/alloc.h src/ansicheck.h src/command.c src/command.h
	src/plot.c src/scanner.c src/stdfn.c src/syscfg.h src/term.c:
	Remove conditional code for Atari Pure C and Borland C compilers.
