@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.30 2011/05/24 05:39:39 sfeam Exp $
+% $Id: titlepag.tex,v 1.31 2011/09/10 06:12:49 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -52,11 +52,11 @@
 %\addtolength{\textheight}{48pt}
 %\addtolength{\topmargin}{-24pt}
 
-\setlength{\textwidth}{6.25in}
 % \setlength{\oddsidemargin}{0.5cm}
 \setlength{\oddsidemargin}{0.0cm}
 \setlength{\evensidemargin}{0.0cm}
 \setlength{\topmargin}{-0.5in}
+\setlength{\textwidth}{6.50in}
 \setlength{\textheight}{9.5in}
 
 \setlength{\parskip}{1ex}
@@ -162,7 +162,7 @@
 
   \vspace{2ex}
 
-% 18 October 2011  Version 4.6
+% 10 September 2011  Version 4.5
  2011  Version 4.5 (cvs)
 
    \end{center}
